# libboinc-client-py

./: .gitignore  README.md  gui_rpc_client.py  pyproject.toml
src/boinc/: client.py  rpc.py
